Added copyright headers
* Removed unused html file

--- a/index_body.html
+++ b/index_body.html
@@ -1,3 +1,8 @@
+<!--
+    Copyright (c) 2016 Dustin Doloff
+    Licensed under Apache License v2.0
+-->
+
 <body>
     <div id="home">
         <div id="resume">
@@ -15,7 +20,7 @@
                             <div id="container">
                                 <section id="home_">
                                     <p>
-                                        <span class="big">Hi</span>, I'm Dustin Doloff. I'm a programmer currently working for <a href="https://www.amazon.com">Amazon.com</a> on the <a href="http://docs.aws.amazon.com/silk">Silk</a> team for <a href="https://kindle.amazon.com">Kindle</a>.
+                                        <span class="big">Hi</span>, I'm Dustin Doloff. I'm a programmer currently working for <a href="https://www.amazon.com">Amazon.com</a> on the <a href="https://amzn.com/B00AQL8VU4">shopping app</a>.
                                     </p>
                                     <p>
                                         <span class="big">I</span> enjoy working on side projects in my spare time. Some of my more interesting projects include a compression program that uses math to calculate the original file, a programming game written in JavaScript where you program robots to gather resources, fight, and build other robots autonomously, and a <a href="https://github.com/quittle/JSS">CSS compiler</a> that runs in JavaScript client side.
@@ -62,8 +67,8 @@
                                             <li><span class="meter" max="5" min="0" value="3"></span> Bash</li>
                                             <li><span class="meter" max="5" min="0" value="3"></span> C</li>
                                             <li><span class="meter" max="5" min="0" value="3"></span> C++</li>
-                                            <li><span class="meter" max="5" min="0" value="3"></span> C#</li>
-                                            <li><span class="meter" max="5" min="0" value="2"></span> ColdFusion</li>
+                                            <li><span class="meter" max="5" min="0" value="2"></span> C#</li>
+                                            <li><span class="meter" max="5" min="0" value="1"></span> ColdFusion</li>
                                             <li><span class="meter" max="5" min="0" value="5"></span> HTML/CSS</li>
                                             <li><span class="meter" max="5" min="0" value="4"></span> Java</li>
                                             <li><span class="meter" max="5" min="0" value="5"></span> JavaScript</li>
