Fixed shrunken video in CommenTube

--- a/projects/commentube/index.html
+++ b/projects/commentube/index.html
@@ -43,5 +43,5 @@
 		<div id="commentBox"></div>
 	</div>
 
-	<script type="text/javascript" src="//www.youtube.com/iframe_api"></script>
+	<script type="text/javascript" src="https://www.youtube.com/iframe_api" defer></script>
 </body>
