--- a/index_body.html
+++ b/index_body.html
@@ -1,5 +1,5 @@
 <!--
-    Copyright (c) 2016 Dustin Doloff
+    Copyright (c) 2016-2018 Dustin Toff
     Licensed under Apache License v2.0
 -->
 
@@ -20,7 +20,7 @@
                             <div id="container">
                                 <section id="home_">
                                     <p>
-                                        <span class="big">Hi</span>, I'm Dustin Doloff. I'm a programmer currently working for <a href="https://www.amazon.com">Amazon.com</a> on the <a href="https://amzn.com/B00AQL8VU4">shopping app</a>.
+                                        <span class="big">Hi</span>, I'm Dustin Toff. I'm a programmer currently working for <a href="https://www.amazon.com">Amazon.com</a> on the <a href="https://amzn.com/B00AQL8VU4">shopping app</a>.
                                     </p>
                                     <p>
                                         <span class="big">I</span> enjoy working on side projects in my spare time. Some of my more interesting projects include a compression program that uses math to calculate the original file, a programming game written in JavaScript where you program robots to gather resources, fight, and build other robots autonomously, and a <a href="https://github.com/quittle/JSS">CSS compiler</a> that runs in JavaScript client side.
@@ -95,13 +95,13 @@
                                             <a href="http://dramaticzoom.com">Dramatic Zoom</a> - An image sharing service to images that zoom dramatically.
                                         </li>
                                         <li>
-                                            <a href="/projects/commentube">CommenTube</a> - A video commenting page for YouTube videos with complete anonymnity. Give feedback to film makers by giving visual as well as textual feedback.
+                                            <a href="https://commentube.dustintoff.com">CommenTube</a> - A video commenting page for YouTube videos with complete anonymnity. Give feedback to film makers by giving visual as well as textual feedback.
                                         </li>
                                         <li>
-                                            <a href="/projects/fallingsand">Falling Sand</a> - Basically a falling sand game clone in Javascript and Canvas. Click and drag to drop various elements. My first attempt using divs is located here.
+                                            <a href="https://fallingsand.dustintoff.com">Falling Sand</a> - Basically a falling sand game clone in Javascript and Canvas. Click and drag to drop various elements. My first attempt using divs is located here.
                                         </li>
                                         <li>
-                                            <a href="/projects/gallery">Gallery</a> - A side project to make a gallery easy to implement on any website that is highly customizable. Uses HTML5 data attributes so unfortunately IE9 doesn't support it. Looks awesome though, think facebook photos.
+                                            Gallery - A side project to make a gallery easy to implement on any website that is highly customizable. Uses HTML5 data attributes so unfortunately IE9 doesn't support it. Looks awesome though, think facebook photos.
                                         </li>
                                         <li>
                                             Mobile Site - This website has an optional mobile version. Don't have many devices to check it with though so it might not look great on smaller or older devices.
@@ -119,7 +119,7 @@
                                 </section>
                                 <section id="links_">
                                     <div>
-                                        <a href="https://www.linkedin.com/pub/dustin-doloff/38/226/482">LinkedIn</a>
+                                        <a href="https://linkedin.com/in/d-u-s-t-i-n">LinkedIn</a>
                                     </div>
                                     <br>
                                     <div>
@@ -133,7 +133,7 @@
                                 </section>
                                 <section id="contact_">
                                     <p>
-                                        You can contact me via email. My email address is <a href="mailto:me@dustindoloff.com">me@dustindoloff.com</a>
+                                        You can contact me via email. My email address is <a href="mailto:me@dustintoff.com">me@dustintoff.com</a>
                                     </p>
                                 </section>
                             </div>
