Fixed small typo

--- a/index_body.html
+++ b/index_body.html
@@ -23,7 +23,7 @@
                                         <span class="big">Hi</span>, I'm Dustin Toff. I'm a programmer currently working on an unreleased <a href="https://aws.amazon.com">AWS</a> service.
                                     </p>
                                     <p>
-                                        <span class="big">I</span> enjoy working on side projects and learning bulid systems in my free time. You can check out my projects on <a href="https://github.com/quittle">GitHub</a>.
+                                        <span class="big">I</span> enjoy working on side projects and learning build systems in my free time. You can check out my projects on <a href="https://github.com/quittle">GitHub</a>.
                                     </p>
                                 </section>
                                 <section id="resume_">
