Remove link to Quick Utility in play store

--- a/index_body.html
+++ b/index_body.html
@@ -126,7 +126,7 @@
                                             <a href="https://play.google.com/store/apps/details?id=bas.com">Boot Animation Shuffle</a> - Android app I made that randomizes your device's boot animation. It includes a market for people to upload, share and download animations. You can also generate custom text animations or auto-create photo slideshows from images on your device.
                                         </li>
                                         <li>
-                                            <a href="https://play.google.com/store/apps/details?id=com.quick.util">Quick Utility</a> - Easily toggle settings or launch an app anywhere in Android by long-pressing the search key.
+                                            Quick Utility - Easily toggle settings or launch an app anywhere in Android by long-pressing the search key.
                                         </li>
                                         <li>
                                             Web-based File Manager/Console - A JavaScript- and Canvas-based file manager and console interacting with a Perl backend using AJAX. I wanted to manage my files easier than SFTP, so I did my best to copy the click-and-drag feel of modern file managers. I also added a handy feature at the bottom; a console to execute programs on the backend. As far as I've found, it was a pretty novel idea. I could "cd" through the console or use a keyboard or clicks to navigate. The console would take input and display output from programs you wanted to execute. As I worked further on this project, I quickly realized how dangerous it was to have lying around publicly displayed, even with authentication, so I discontinued work on it and have since taken it down.
