Fix lighthouse warnings and cleanup package.json

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     Copyright (c) 2016-2018 Dustin Toff
     Licensed under Apache License v2.0
 -->
+<!DOCTYPE html>
 <html lang="en">
   <include src="head.html"></include>
   <body>
