Move html and images to resources folder

--- a/resources/html/head.html
+++ b/resources/html/head.html
@@ -13,9 +13,9 @@
     gtag("config", "G-D3Z0WBDBDK");
   </script>
 
-  <script src="resources/scripts/all.js" defer></script>
-  <script src="resources/scripts/analytics-listeners.js"></script>
-  <link href="resources/style/main.scss" rel="stylesheet" />
+  <script src="../scripts/all.js" defer></script>
+  <script src="../scripts/analytics-listeners.js"></script>
+  <link href="../style/main.scss" rel="stylesheet" />
 
   <title>Dustin Toff</title>
   <meta
@@ -25,5 +25,5 @@
   <meta name="author" content="Dustin Toff" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#bbb" />
-  <link rel="shortcut icon" href="favicon.png" />
+  <link rel="shortcut icon" href="../images/favicon.png" />
 </head>
