--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -4,7 +4,7 @@
 -->
 <!DOCTYPE html>
 <html lang="en">
-  <include src="head.html"></include>
+  <include src="resources/html/head.html"></include>
   <body>
     <div id="home">
       <div id="resume">
