Convert JS to TS

--- a/resources/html/head.html
+++ b/resources/html/head.html
@@ -13,8 +13,8 @@
     gtag("config", "G-D3Z0WBDBDK");
   </script>
 
-  <script src="../scripts/all.js" defer></script>
-  <script src="../scripts/analytics-listeners.js"></script>
+  <script src="../scripts/all.ts" defer></script>
+  <script src="../scripts/analytics-listeners.ts"></script>
   <link href="../style/main.scss" rel="stylesheet" />
 
   <title>Dustin Toff</title>
