Renamed favicon image to consistent for resume site re-use

--- a/resources/html/head.html
+++ b/resources/html/head.html
@@ -25,5 +25,5 @@
   <meta name="author" content="Dustin Toff" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#bbb" />
-  <link rel="shortcut icon" href="../images/favicon.png" />
+  <link rel="icon" href="../images/favicon.png" />
 </head>
