Update for Meta employment + cleaned up some projects and language proficiencies

--- a/resources/html/home.html
+++ b/resources/html/home.html
@@ -1,15 +1,19 @@
 <section id="home_">
   <p>
     <span class="big">Hi</span>, I'm Dustin Toff. I'm a software engineer with a
-    passion for build tooling and accessibility, currently working on the Living
-    Room Infrastructure and Tooling team of
-    <a href="https://www.primevideo.com">Amazon Prime Video</a>.
+    passion for build tooling and accessibility, currently working at
+    <a href="https://meta.com/">Meta</a> on a team protecting users' privacy
+    within the
+    <a href="https://about.fb.com/news/category/integrity-security"
+      >Integrity organization</a
+    >, keeping Meta's platforms safe.
   </p>
   <p>
     <span class="big">I</span> work on a variety of side projects ranging from
-    an accessibility testing tool for Android named
-    <a href="https://github.com/quittle/a11y-ally">A11y Ally</a>
-    to developing custom build rules for the
+    building a <a href="https://github.com/quittle/a11y-ally">browser</a> from
+    scratch in Rust, to an accessibility testing tool for Android named
+    <a href="https://github.com/quittle/a11y-ally">A11y Ally</a>, to developing
+    custom build rules for the
     <a href="https://bazel.build">Bazel build system</a>. You can check out my
     projects on <a href="https://github.com/quittle">GitHub</a>.
   </p>
