--- a/resources/html/projects.html
+++ b/resources/html/projects.html
@@ -6,6 +6,25 @@
   <br />
   <ul>
     <li>
+      <a href="https://github.com/quittle/wowser">Wowser</a>
+      - Having worked on
+      <a
+        href="https://docs.aws.amazon.com/silk/latest/developerguide/what-is-silk.html"
+        >the Silk browser</a
+      >
+      (a <a href="https://www.chromium.org/Home/">Chromium</a> fork) years ago
+      at Amazon, I decided try my hand at building a browser from scratch while
+      learning Rust at the same time. Still a work in progress, I challenged
+      myself to do so using only a minimum set of external crates. So far I've
+      built a
+      <a href="https://en.wikipedia.org/wiki/Glyph_Bitmap_Distribution_Format"
+        >BDF</a
+      >
+      font parser, an HTML layout renderer leveraging OpenGL, a CSS parser and
+      style engine, a Javascript interpreter, an HTTP networking stack, and much
+      more.
+    </li>
+    <li>
       <a
         href="https://play.google.com/store/apps/details?id=com.quittle.a11yally"
         >A11y Ally</a
@@ -25,17 +44,11 @@
       but without any compiling or server-side dependencies.
     </li>
     <li>
-      <a href="https://dramaticzoom.com">Dramatic Zoom</a>
+      <a href="https://github.com/quittle/www_dramaticzoom_com"
+        >Dramatic Zoom</a
+      >
       - A just-for-fun image sharing service that takes users' images and zooms
-      in on them to a dramatic soundtrack. No longer actively maintained.
-    </li>
-    <li>
-      <a href="https://github.com/quittle/wowser">Wowser</a>
-      - After working on Chromium in a previous role, I decided to learn Rust
-      and explore what it takes to build a browser from scratch at the same
-      time. The goal is to explore as many aspects of Rust as possible while
-      implementing nearly all components from scratch from the network stack to
-      rendering to the Javascript engine.
+      in on them to a dramatic soundtrack. The website is no longer active.
     </li>
     <li>
       <a href="https://commentube.dustintoff.com">CommenTube</a>
