--- a/resources/html/links.html
+++ b/resources/html/links.html
@@ -1,13 +1,16 @@
 <section id="links_">
   <div>
+    <img src="https://github.com/favicon.ico" alt="Github Logo" />
     <a href="https://github.com/quittle">GitHub</a>
   </div>
   <br />
   <div>
+    <img src="https://linkedin.com/favicon.ico" alt="LinkedIn Logo" />
     <a href="https://linkedin.com/in/d-u-s-t-i-n">LinkedIn</a>
   </div>
   <br />
   <div>
+    <img src="https://twitter.com/favicon.ico" alt="Twitter Logo" />
     <a href="https://twitter.com/qvittle">Twitter</a>
   </div>
   <br />
