Remove Boot Animation Shuffle store listing link

--- a/resources/html/projects.html
+++ b/resources/html/projects.html
@@ -65,13 +65,10 @@
       on older devices as I don't have many to test with.
     </li>
     <li>
-      <a href="https://play.google.com/store/apps/details?id=bas.com"
-        >Boot Animation Shuffle</a
-      >
-      - Android app I made that randomizes your device's boot animation. It
-      includes a market for people to upload, share and download animations. You
-      can also generate custom text animations or auto-create photo slideshows
-      from images on your device.
+      Boot Animation Shuffle - Android app I made that randomizes your device's
+      boot animation. It includes a market for people to upload, share and
+      download animations. You can also generate custom text animations or
+      auto-create photo slideshows from images on your device.
     </li>
     <li>
       Quick Utility - Easily toggle settings or launch an app anywhere in
