--- a/resources/html/links.html
+++ b/resources/html/links.html
@@ -11,7 +11,7 @@
   <br />
   <div>
     <img src="https://twitter.com/favicon.ico" alt="Twitter Logo" />
-    <a href="https://twitter.com/qvittle">Twitter</a>
+    <a href="https://twitter.com/qvittle">X (Twitter)</a>
   </div>
   <br />
 </section>
