--- a/resources/html/head.html
+++ b/resources/html/head.html
@@ -26,4 +26,5 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#bbb" />
   <link rel="icon" href="../images/favicon.png" />
+  <link rel="canonical" href="https://dustintoff.com" />
 </head>
