--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -2,7 +2,7 @@
     Copyright (c) 2016-2018 Dustin Toff
     Licensed under Apache License v2.0
 -->
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <include src="resources/html/head.html"></include>
   <body>
